<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/informe_seu_nome"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/informe_seu_peso"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/informe_sua_altura"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/image_cadastro"
        android:layout_width="250dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner_button"
            android:text="@string/salvar"

            android:textColor="@color/colorTextWhite" />

        <Button
            android:id="@+id/button_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner_button"
            android:text="@string/foto"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorTextWhite" />
    </LinearLayout>
    <!--LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/button_salvar"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_button"
            android:text="@string/salvar"
            android:textColor="@color/colorTextWhite" />

        <Button
            android:id="@+id/button_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/round_corner_button"
            android:text="@string/foto"
            android:textColor="@color/colorTextWhite" />

        <Button
            android:id="@+id/button_pesagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/round_corner_button"
            android:text="@string/pesagem"
            android:padding="8dp"
            android:textColor="@color/colorTextWhite" />
    </LinearLayout-->


</LinearLayout>
